--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
     <ListView
         android:id="@+id/lvCustomList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent" 
+        tools:listitem="@layout/layout_list_item" />
 
 </RelativeLayout>
